@@ -1,3 +1,7 @@
+2011-05-20  Andreas Schwab  <schwab@redhat.com>
+
+	* stdlib/longlong.h: Update from GCC.
+
 2011-05-23  Andreas Schwab  <schwab@redhat.com>
 
 	* sysdeps/unix/sysv/linux/ia64/sysconf.c (HAS_CPUCLOCK): Add
